# pyGRF

./: .gitignore  README.md  pyproject.toml
docs/: macros.tex  ms.tex  packages.tex  references.bib
docs/sections/: conditional_gaussian.tex  gaussian_simulation.tex  high_dim_isotropic_simulation.tex  incremental_cholesky.tex  simulate_gaussian.tex
pygrf/: __main__.py  adapted_span.py  basis.py  grf.py  kernels.py  matrices.py
tests/: test_adapted_span.py  test_basis.py  test_kernels.py  test_matrices.py
tests/_regtest_outputs/: test_kernels.test_squared_exponential.out
